# dev-challenge-4

./: .env.example  .gitignore  README.md  pyproject.toml  review.py
.prreviewiq/: state.json
app/: dependencies.py  main.py
app/api/: routes.py
app/core/: config.py
app/schemas/: review.py
app/services/: anthropic.py  hf.py  mcp_client.py  notion.py  parsing.py  review.py  reviewer.py  state.py
app/static/: app.js  index.html  styles.css
tests/: test_review_service.py
