[project]
name = "prreviewiq"
version = "0.1.0"
description = "AI code reviewer with a FastAPI dashboard and Notion MCP logging."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.115,<1.0",
  "httpx>=0.27.0",
  "huggingface_hub>=0.27.0",
  "mcp>=1.0.0",
  "pydantic>=2.7,<3.0",
  "pydantic-settings>=2.3,<3.0",
  "uvicorn>=0.30,<1.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.3,<9.0",
]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
